test/classes/initializers/errors/iteratorEnterContextMethodCalled.good
iteratorEnterContextMethodCalled.chpl:2: error: iterators can't be the enterContext method, please rename this iterator
